k8s/apps/dns-updater/dns-updater-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dns-updater
spec:
  selector:
    app: dns-updater
  ports:
    - port: 8000
      targetPort: 8000
